Fix text contrast

--- a/web/public/css/style.scss
+++ b/web/public/css/style.scss
@@ -25,7 +25,7 @@ $my-btn-cyan-bg: #00bdd7;
 $my-btn-cyan-color: $my-white;
 
 $my-eduid-bg: #e60000;
-$my-eduid-color: #ffffff;
+$my-eduid-color: #e4e4e4;
 
 // tags:
 html {
@@ -144,14 +144,14 @@ ul.error {
 
 .card-mojeid {
   background-color: #404040;
-  color: #9e9e9e;
+  color: #e6e6e6;
 
   .h6 {
     color: $my-white;
   }
 
   .btn-link {
-    color: #9e9e9e;
+    color: #bfbfbf;
   }
 
   .btn-link:hover {
@@ -195,7 +195,7 @@ ul.error {
 
 .card-mzk {
   background-color: $my-white;
-  color: #a1a1a1;
+  color: #4d4d4d;
 
   .h6 {
     color: #504b55;
